--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "validate": "node src/data/validate-json.js"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
@@ -35,6 +36,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@jsonresume/schema": "^1.2.1"
   }
 }
